--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "express": "~4.13.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.12"
   }
 }
