--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
-    "express": "~4.13.1"
+    "express": "~4.13.1",
+    "mongodb": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.14.12"
