--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng build & nodemon ./bin/www",
+    "start": "ng build && nodemon ./bin/www",
     "startFront": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
