--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "private": true,
   "dependencies": {
-    "mongodb": "^3.0.2",
     "@angular/animations": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
@@ -27,6 +26,9 @@
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "mongodb": "^3.0.2",
+    "mongoose": "^5.0.4",
+    "passport": "^0.4.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
