--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@angular/service-worker": "^5.2.4",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "hammerjs": "^2.0.8",
+    "mongodb": "^3.0.2",
     "mongoose": "^5.0.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.5.0",
-    "hammerjs": "^2.0.8",
-    "mongodb": "^3.0.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
