--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hammerjs": "^2.0.8",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.4",
+    "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.5.0",
