--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng build && nodemon ./bin/www",
+    "startProd": "ng build --prod && node ./bin/www",
     "debug": "ng build && node inspect ./bin/www",
     "startFront": "ng serve",
     "build": "ng build --prod",
