--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.6.8",
-    "@angular/compiler-cli": "^5.2.0",
-    "typescript": "~2.5.3",
     "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "^5.2.0",
+    "@angular/cli": "1.6.8",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
@@ -39,6 +38,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "hammerjs": "^2.0.8",
+    "highcharts": "^6.0.6",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.4",
     "multer": "^1.3.0",
@@ -46,12 +46,14 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.5.0",
     "rxjs": "^5.5.6",
+    "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "1.6.8",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/highcharts": "^5.0.16",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
